--- a/3page.html
+++ b/3page.html
@@ -21,6 +21,7 @@
     </ul>
     <div class="page link 3">
       <a href="2page.html">GO BACK</a>
+      <a href="4page.html">NEXT PAGE</a>
     </div>
   </body>
 </html>
