--- a/practice.html
+++ b/practice.html
@@ -66,6 +66,7 @@
           value="Last Name"
           placeholder="Last Name"
         />
+    </div>
 
       <div>
         <label for="Date">Date</label>
