--- a/4page.html
+++ b/4page.html
@@ -54,7 +54,10 @@
       </div>
       <hr />
       <div class="car-rental-field">
-        <p>Car Rental</p>
+        <p>
+          Car Rental <br />
+          Select one
+        </p>
         <input name="yes" id="yes" type="checkbox" value="yes" />
         <label for="yes">Yes</label>
         <input name="no" id="no" type="checkbox" value="no" />
@@ -108,12 +111,12 @@
       </div>
       <hr />
       <p>Seat selection</p>
-      <div class="main-course-field">
-        <select name="main-course">
+      <div class="airline-field">
+        <select name="airline-field">
           <option value="">Choose seat option</option>
-          <option value="spaghetti">Economy</option>
-          <option value="linguine">Business</option>
-          <option value="lasagna">First class</option>
+          <option value="economy">Economy</option>
+          <option value="business">Business</option>
+          <option value="first-class">First class</option>
         </select>
       </div>
       <br />
