--- a/main.html
+++ b/main.html
@@ -14,11 +14,7 @@
   </head>
   <body>
     <h1 style="text-align: center">THE MARLOW HOUSE</h1>
-    <img scro="./assets/marlowhouse.jpeg" />
-    <img
-      src="https://mail.google.com/mail/u/0?ui=2&ik=0b8d944834&attid=0.1&permmsgid=msg-f:1821173588760072281&th=19461bbae05e1059&view=fimg&fur=ip&permmsgid=msg-f:1821173588760072281&sz=s0-l75-ft&attbid=ANGjdJ-50Z2beBvpRQ6KLX-jEhWS3QNYPx3AiiexWw-Kv7Z1CdqQcbaokJ-6iBZ13HPgGPjEzYip2inN70rVR-z0uBbOkWySRhkBgsn7IPva-K379ywlc-Da-nsCMXI&disp=emb&realattid=19461bb7255e75922981&zw"
-      width="400px"
-    />
+    <img src="./assets/marlowhouse.jpeg" alt="marlow-house-image" />
     <h1 style="text-align: center; color: blue">INTERIOR DESIGN FIRM</h1>
     <hr />
     <p style="text-align: center">
@@ -32,8 +28,12 @@
     <table>
       <thead>
         <tr>
-          <h3>Why choose us</h3>
-          <i class="fa-solid fa-arrow-down"></i>
+          <th>
+            <h3>Why choose us</h3>
+          </th>
+          <th>
+            <i class="fa-solid fa-arrow-down"></i>
+          </th>
           <th>Quality</th>
           <th>Honest</th>
           <th>Timeless</th>
