--- a/4page.html
+++ b/4page.html
@@ -172,6 +172,12 @@
         <textarea name="info" id="info" rows="10">Type here...</textarea>
       </div>
     </form>
+<br>
+    <form>
+      <div>
+        <button type="submit">Submit</button>
+      </div>
+    </form>
 
     <footer>
       <p>2025 The Marlow House. All rights reserved.</p>
